Pulled data from main data BASEURL and make it dynamic, NEXT: figured out how to get the project ID

--- a/Details_bootstrapTest/DetailsLiveMockup.html
+++ b/Details_bootstrapTest/DetailsLiveMockup.html
@@ -1,5 +1,6 @@
 <div id="app" class="container">
   <div class="containerApp">
+    <!-- top container -->
     <div class="container__top" id="container__top">
       <div class="top__title">
         <h1>Auditorium</h1>
@@ -67,6 +68,9 @@
         </p>
       </div>
     </div>
+
+    <!-- middle container  -->
+
     <div class="container__middle">
       <div class="top__title middle-title">
         <h1>Updates</h1>
@@ -139,6 +143,9 @@
         </div>
       </div>
     </div>
+
+    <!-- bottom container  -->
+
     <div class="container-bottom">
       <div class="top__title">
         <h1>Project Images</h1>
@@ -269,7 +276,7 @@
           />
         </li>
         <!-- Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens! 
-                            <li></li> -->
+                              <li></li> -->
       </ul>
     </div>
   </div>
