added is completed CSS and HTML to details

--- a/Details_bootstrapTest/index.html
+++ b/Details_bootstrapTest/index.html
@@ -42,13 +42,22 @@
     <div id="app" class="container">
       <div class="containerApp">
         <div class="container__top" id="container__top">
-          <div class="top__title">
-            <h1>Auditorium</h1>
-            <p>
-              <em class="fa fa-graduation-cap" aria-hidden="true"></em>
-              Elementary School
-            </p>
+          <div class="top__info-isComplete">
+            <div class="top__title">
+              <h1>Auditorium</h1>
+              <p>
+                <em class="fa fa-graduation-cap" aria-hidden="true"></em>
+                Elementary School
+              </p>
+            </div>
+
+            <div class="isComplete">
+              <div class="isComplete__label">
+                <p>Completed</p>
+              </div>
+            </div>
           </div>
+
           <div class="top__img">
             <img
               src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604069785/erika-fletcher-MZxqc6n9qCw-unsplash_1_ajkdux.jpg"
@@ -109,6 +118,7 @@
             </p>
           </div>
         </div>
+
         <div class="container__middle">
           <div class="top__title middle-title">
             <h1>Updates</h1>
@@ -320,6 +330,6 @@
       </div>
     </div>
     <!-- Main JS -->
-    <script src="./JS/app.js"></script>
+    <!-- <script src="./JS/app.js"></script> -->
   </body>
 </html>
