--- a/Details_bootstrapTest/index.html
+++ b/Details_bootstrapTest/index.html
@@ -330,6 +330,6 @@
       </div>
     </div>
     <!-- Main JS -->
-    <!-- <script src="./JS/app.js"></script> -->
+    <script src="./JS/app.js"></script>
   </body>
 </html>
