Added updated livedetailspage HTML

--- a/Details_bootstrapTest/index.html
+++ b/Details_bootstrapTest/index.html
@@ -41,291 +41,29 @@
   <body>
     <div id="app" class="container">
       <div class="containerApp">
-        <div class="container__top" id="container__top">
-          <div class="top__info-isComplete">
-            <div class="top__title">
-              <h1>Auditorium</h1>
+        <div id="app" class="container">
+          <div class="container__top" id="container__top"></div>
+          <!-- Middle UPDATE Container -->
+          <div class="container__middle" id="container__middle">
+            <div class="top__title_middle middle-title">
+              <h1>Updates</h1>
               <p>
-                <em class="fa fa-graduation-cap" aria-hidden="true"></em>
-                Elementary School
+                <em class="fa fa-pencil-square" aria-hidden="true"></em> Updated
+                information
               </p>
             </div>
-
-            <div class="isComplete">
-              <div class="isComplete__label">
-                <p>Completed</p>
-              </div>
-            </div>
           </div>
-
-          <div class="top__img">
-            <img
-              src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604069785/erika-fletcher-MZxqc6n9qCw-unsplash_1_ajkdux.jpg"
-              alt="High School Auditorium"
-            />
+          <!-- Bottom img Container -->
+          <div class="container__bottom">
+            <div class="top__title">
+              <h1>Image</h1>
+              <p>
+                <em class="fa fa-picture-o" aria-hidden="true"></em>Image
+                Gallery
+              </p>
+            </div>
+            <div id="container__bottom"></div>
           </div>
-          <div class="top__info">
-            <!-- Estimated Completion Date -->
-            <div class="top__info-extra">
-              <div class="info-extra__icon">
-                <em class="fa fa-calendar-check-o" aria-hidden="true"></em>
-              </div>
-              <div class="info-extra__title">
-                <span>Estimated Completion Date</span>
-                <p>09/2022</p>
-              </div>
-            </div>
-            <!-- Projected Budget -->
-            <div class="top__info-extra">
-              <div class="info-extra__icon">
-                <em class="fa fa-usd" aria-hidden="true"></em>
-              </div>
-              <div class="info-extra__title">
-                <span>Projected Budget</span>
-                <p>$43M</p>
-              </div>
-            </div>
-            <!-- Percentage Completed -->
-            <div class="top__info-extra">
-              <div class="info-extra__icon">
-                <em class="fa fa-tasks" aria-hidden="true"></em>
-              </div>
-              <div class="info-extra__title">
-                <span>Percentage Completed</span>
-                <p class="percentage">30%</p>
-              </div>
-            </div>
-            <!-- Category -->
-            <div class="top__info-extra">
-              <div class="info-extra__icon">
-                <em class="fa fa-briefcase" aria-hidden="true"></em>
-              </div>
-              <div class="info-extra__title">
-                <span>Category</span>
-                <p>Fine Arts</p>
-              </div>
-            </div>
-          </div>
-          <div class="top__description">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quod
-              eos atque, nemo iste earum,lias quam rem quibusdam incidunt error
-              commodi impedit magnam officia?Lorem ipsum dolor si. Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Ab quod eos atque,
-              nemo iste earum,lias quam rem quibusdam incidunt error commodi
-              impedit magnam officia?Lorem ipsum dolor sifficia?Lorem ipsum
-              dolor sifficia?
-            </p>
-          </div>
-        </div>
-
-        <div class="container__middle">
-          <div class="top__title middle-title">
-            <h1>Updates</h1>
-            <p>
-              <em class="fa fa-pencil-square" aria-hidden="true"></em> Updated
-              information
-            </p>
-          </div>
-          <div class="middle__news">
-            <div class="news__top">
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598505085/tim-mossholder-WE_Kv_ZB1l0-unsplash_1_x8iqrj.jpg"
-                alt="Updates and news"
-              />
-            </div>
-            <div class="news__bottom">
-              <div class="bottom__title">
-                <h2>GroundBreaking Ceremony</h2>
-              </div>
-              <div class="bottom__description">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-                  quod eos atque, nemo iste earum, alias quam rem quibusdam
-                  incidunt error commodi impedit magnam officia?Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ab quod eos
-                  atque, nemo iste earum
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="middle__news">
-            <div class="news__top">
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598505164/deleece-cook-zzjLGF_6dx4-unsplash_1_hjkqeh.jpg"
-                alt="Updates and news"
-              />
-            </div>
-            <div class="news__bottom">
-              <div class="bottom__title">
-                <h2>GroundBreaking Ceremony</h2>
-              </div>
-              <div class="bottom__description">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-                  quod eos atque, nemo iste earum, alias quam rem quibusdam
-                  incidunt error commodi impedit magnam officia?Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ab quod eos
-                  atque, nemo iste earum
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="middle__news">
-            <div class="news__top">
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602433185/hamilton-hs_siuobu.jpg"
-                alt="Updates and news"
-              />
-            </div>
-            <div class="news__bottom">
-              <div class="bottom__title">
-                <h2>GroundBreaking Ceremony</h2>
-              </div>
-              <div class="bottom__description">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-                  quod eos atque, nemo iste earum, alias quam rem quibusdam
-                  incidunt error commodi impedit magnam officia?Lorem ipsum
-                  dolor sit amet consectetur adipisicing elit. Ab quod eos
-                  atque, nemo iste earum
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-bottom">
-          <div class="top__title">
-            <h1>Project Images</h1>
-            <p>
-              <em class="fa fa-picture-o" aria-hidden="true"></em> Image gallery
-            </p>
-          </div>
-          <div class="swiper-container showMobile">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img
-                  src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602436864/small-hs-plano_x3hktu.jpg"
-                  alt="Picture of the project"
-                  loading="lazy"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602436709/small-libra_p0at5d.jpg"
-                  alt="Picture of the project"
-                  loading="lazy"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604074284/darkSchool_zgnvss.jpg"
-                  alt="Picture of the project"
-                  loading="lazy"
-                />
-              </div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-          </div>
-          <ul class="hideMobile">
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602436864/small-hs-plano_x3hktu.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602436709/small-libra_p0at5d.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602433275/hc-bus_znhbco.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604074284/darkSchool_zgnvss.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1602433185/hamilton-hs_siuobu.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604074281/question_rbfn2z.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604074385/babyboy_pjrncc.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604069785/erika-fletcher-MZxqc6n9qCw-unsplash_1_ajkdux.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598504075/friscoISD_sezpau.png"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598502460/pencil_sl098k.jpg"
-                alt="Picture of the project"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598505021/ben-mullins-je240KkJIuA-unsplash_1_svdhzv.jpg"
-                alt="Interior at Nong's"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598507472/qearl-hu-0aQuUvhlvvk-unsplash_idcwtz.jpg"
-                alt="Free Meal"
-                loading="lazy"
-              />
-            </li>
-            <li>
-              <img
-                src="https://res.cloudinary.com/duprwuo4j/image/upload/v1598505052/cdc-GDokEYnOfnE-unsplash_1_fmcyhc.jpg"
-                alt="Free Meal"
-                loading="lazy"
-              />
-            </li>
-            <!-- Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens! 
-                                  <li></li> -->
-          </ul>
         </div>
       </div>
     </div>
