added HTML - NEXT: style, progress-bar, buttons, text

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -47,10 +47,46 @@
 
   <body>
     <header>
-      <h1>Test Bond Project 2018</h1>
+      <h1>Bond Project 2018</h1>
     </header>
 
-    <div id="app"></div>
+    <div id="app">
+      <div class="description__container">
+        <div class="description__text">
+          <p>
+            In November 2018, Frisco ISD voters approved a $691 million bond
+            package to provide funding to build four new schools and maintain
+            and repair existing facilities. Funds will also provide additional
+            resources for classroom technology and school security, as well as
+            additional student opportunities in academics, fine arts and
+            athletics. The bond program is intended to take the District through
+            72,000 students or the end of the 2025-26 school year.
+          </p>
+          <p>
+            The bond program was developed in spring and summer 2018 by the
+            Facilities & Programs Evaluation Committee, an advisory group of
+            FISD community members, parents, students and staff. Included
+            projects were studied and recommended by the committee, which
+            evaluated student enrollment projections, school building capacities
+            and potential facility and maintenance projects. The committee’s
+            work was the continuation of a two-year effort to engage the
+            community in the District’s planning and decision-making process.
+            The bond program received the support of 61 percent of voters.
+          </p>
+        </div>
+        <div class="description__progress-bar" id="progressBar__container">
+          <div id="progressBar"></div>
+        </div>
+      </div>
+      <div class="button__container">
+        <div class="btn first">
+          <button type="button">New Buildings</button>
+          <button type="button">REFRESH & RENEW</button>
+          <button type="button">SECURITY</button>
+          <button type="button">ACADEMICS</button>
+        </div>
+      </div>
+    </div>
 
     <!--Form Style-->
     <script src="./JS/form-style.js"></script>
