Added pciture to top page

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -48,6 +48,12 @@
   <body>
     <header>
       <h1>Bond Project 2018</h1>
+      <div class="top__img">
+        <img
+          src="https://res.cloudinary.com/duprwuo4j/image/upload/v1604069785/erika-fletcher-MZxqc6n9qCw-unsplash_1_ajkdux.jpg"
+          alt="bond page img"
+        />
+      </div>
     </header>
 
     <div id="app">
@@ -56,9 +62,9 @@
           <div
             id="progressBar"
             class="progress-bar__completed"
-            data-completion="45"
+            data-completion="90"
           >
-            <span>45% Completed</span>
+            <span>90% Completed</span>
           </div>
         </div>
 
@@ -70,18 +76,10 @@
             resources for classroom technology and school security, as well as
             additional student opportunities in academics, fine arts and
             athletics. The bond program is intended to take the District through
-            72,000 students or the end of the 2025-26 school year.
-          </p>
-          <p>
-            The bond program was developed in spring and summer 2018 by the
-            Facilities & Programs Evaluation Committee, an advisory group of
-            FISD community members, parents, students and staff. Included
-            projects were studied and recommended by the committee, which
-            evaluated student enrollment projections, school building capacities
-            and potential facility and maintenance projects. The committee’s
-            work was the continuation of a two-year effort to engage the
-            community in the District’s planning and decision-making process.
-            The bond program received the support of 61 percent of voters.
+            72,000 students or the end of the 2025-26 school year. The bond
+            program was developed in spring and summer 2018 by the Facilities &
+            Programs Evaluation Committee, an advisory group of FISD community
+            members, parents, students and staff
           </p>
         </div>
       </div>
