Adding percentage through the js

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -64,7 +64,7 @@
             class="progress-bar__completed"
             data-completion="90"
           >
-            <span>90% Completed</span>
+            <span id="percentage_completion"> </span>
           </div>
         </div>
 
