edited browser title to pages

--- a/Fetch_BootstrapTest/index.html
+++ b/Fetch_BootstrapTest/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test BOOTSTRAP Bond Page</title>
+    <title>District Bond Project 2018 - Search</title>
 
     <!-- Font Awesome -->
     <link
@@ -47,7 +47,7 @@
 
   <body>
     <header>
-      <h1>Test Bond Project 2018</h1>
+      <h1>District Bond Project 2018 - Search</h1>
     </header>
 
     <div id="app">
