--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test BOOTSTRAP Bond Page</title>
+    <title>District 2018 Bond Page</title>
 
     <!-- Font Awesome -->
     <link
