changed buttons border and background, added all categories button

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="button__container">
-        <div>
+        <div class="categories__title">
           <h2>Categories</h2>
         </div>
         <div class="button__holder">
@@ -100,6 +100,9 @@
           <button type="button" class="button-style">REFRESH & RENEW</button>
           <button type="button" class="button-style">SECURITY</button>
           <button type="button" class="button-style">ACADEMICS</button>
+          <button type="button" class="button-style all-background">
+            All Categories
+          </button>
         </div>
       </div>
     </div>
