added dropcap in text

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="description__text">
-          <p>
+          <p class="dropcap">
             In November 2018, Frisco ISD voters approved a $691 million bond
             package to provide funding to build four new schools and maintain
             and repair existing facilities. Funds will also provide additional
